--- a/css/creative.css
+++ b/css/creative.css
@@ -253,5 +253,14 @@ p.text-faded.mb-4{
 
 #projects{
   /*border-bottom: -30px;*/
-  /*padding-bottom: -100px;*/
+  padding-bottom: 0px;
+}
+
+.fa-linkedin-square {
+  color:#0077b5;
+}
+
+.fa-linkedin-square:hover {
+  color:#000000;
+  text-decoration: none;
 }
